<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Newshunt. All rights reserved. -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bt_next"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <!-- Email -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textview_user_title"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/login_margin"
            android:paddingRight="@dimen/login_margin">

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/circlular_shape"
                android:src="@drawable/ic_user_name"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <!-- About -->
            <EditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/iv_profile_image"
                android:drawableLeft="@drawable/ic_user_name"
                android:ems="12"
                android:hint="@string/about"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:inputType="textAutoCorrect|textMultiLine|textLongMessage"/>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_sign_up"
        android:background="@color/color_blue_color"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/already_have_account"
        android:textColor="@color/color_white"
        android:textSize="12sp"/>

</RelativeLayout>